src/test/deca/syntax/invalid/bas_var_list.deca
// Description :
//    Liste de variable avec missing variable.
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'int'

int a, , b;
